new pristine added

--- a/pristine_justin.ipynb
+++ b/pristine_justin.ipynb
@@ -2501,7 +2501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# genres = combined_df[:,\"Genres\"]\n",
+    "genres = combined_df[:,\"Genres\"]\n",
     "# genres.split(pat=\",\", n=-1, expand=False)"
    ]
   },
