Genre count per streaming service dataframes and bar graphs were added by paola

--- a/data_merge_paola.ipynb
+++ b/data_merge_paola.ipynb
@@ -3614,7 +3614,9 @@
    ],
    "source": [
     "#DISNEY VIDEO GENRES: Bar Graph\n",
-    "top_disney_genres.plot.bar(x='Genre', y='Genre Count', rot=90, color='b')"
+    "top_disney_genres.plot.bar(x='Genre', y='Genre Count', rot=90, color='b')\n",
+    "\n",
+    "#plt.savefig(\"Plots/Max_Temp_vs_nLat.png\")"
    ]
   },
   {
