--- a/pristine_justin.ipynb
+++ b/pristine_justin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "4      Italy,Spain,West Germany                  Italian    161.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "[9976 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>La La Land</td>\n",
+       "      <td>Cleopatra</td>\n",
        "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -427,27 +427,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4828</th>\n",
-       "      <td>The Resurrection of Broncho Billy</td>\n",
+       "      <td>Iron Man 2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4829</th>\n",
-       "      <td>The Taste of Others</td>\n",
+       "      <td>Mandragola</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4830</th>\n",
-       "      <td>Stubble Trouble</td>\n",
+       "      <td>The Pointer</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4831</th>\n",
-       "      <td>One True Thing</td>\n",
+       "      <td>Miracle Fish</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4832</th>\n",
-       "      <td>The Little Match Girl</td>\n",
+       "      <td>Little Isles of Freedom</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -456,23 +456,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                                  Title  Nomination\n",
-       "0                        A Star Is Born          25\n",
-       "1                               Titanic          16\n",
-       "2                          Moulin Rouge          15\n",
-       "3                  Mutiny on the Bounty          15\n",
-       "4                            La La Land          14\n",
-       "...                                 ...         ...\n",
-       "4828  The Resurrection of Broncho Billy           1\n",
-       "4829                The Taste of Others           1\n",
-       "4830                    Stubble Trouble           1\n",
-       "4831                     One True Thing           1\n",
-       "4832              The Little Match Girl           1\n",
+       "                        Title  Nomination\n",
+       "0              A Star Is Born          25\n",
+       "1                     Titanic          16\n",
+       "2                Moulin Rouge          15\n",
+       "3        Mutiny on the Bounty          15\n",
+       "4                   Cleopatra          14\n",
+       "...                       ...         ...\n",
+       "4828               Iron Man 2           1\n",
+       "4829               Mandragola           1\n",
+       "4830              The Pointer           1\n",
+       "4831             Miracle Fish           1\n",
+       "4832  Little Isles of Freedom           1\n",
        "\n",
        "[4833 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -523,12 +523,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Ben-Hur</td>\n",
+       "      <td>The Lord of the Rings: The Return of the King</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>The Lord of the Rings: The Return of the King</td>\n",
+       "      <td>Ben-Hur</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -548,13 +548,13 @@
       "text/plain": [
        "                                           Title  Wins\n",
        "0                                        Titanic    12\n",
-       "1                                        Ben-Hur    11\n",
-       "2  The Lord of the Rings: The Return of the King    11\n",
+       "1  The Lord of the Rings: The Return of the King    11\n",
+       "2                                        Ben-Hur    11\n",
        "3                                West Side Story    10\n",
        "4                               The Last Emperor     9"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -626,9 +626,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>La La Land</td>\n",
+       "      <td>Cleopatra</td>\n",
        "      <td>14</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -638,31 +638,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4828</th>\n",
-       "      <td>The Resurrection of Broncho Billy</td>\n",
+       "      <td>Iron Man 2</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4829</th>\n",
-       "      <td>The Taste of Others</td>\n",
+       "      <td>Mandragola</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4830</th>\n",
-       "      <td>Stubble Trouble</td>\n",
+       "      <td>The Pointer</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4831</th>\n",
-       "      <td>One True Thing</td>\n",
+       "      <td>Miracle Fish</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4832</th>\n",
-       "      <td>The Little Match Girl</td>\n",
+       "      <td>Little Isles of Freedom</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -672,23 +672,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                                  Title  Nomination  Wins\n",
-       "0                        A Star Is Born          25   2.0\n",
-       "1                               Titanic          16  12.0\n",
-       "2                          Moulin Rouge          15   4.0\n",
-       "3                  Mutiny on the Bounty          15   1.0\n",
-       "4                            La La Land          14   6.0\n",
-       "...                                 ...         ...   ...\n",
-       "4828  The Resurrection of Broncho Billy           1   1.0\n",
-       "4829                The Taste of Others           1   0.0\n",
-       "4830                    Stubble Trouble           1   0.0\n",
-       "4831                     One True Thing           1   0.0\n",
-       "4832              The Little Match Girl           1   0.0\n",
+       "                        Title  Nomination  Wins\n",
+       "0              A Star Is Born          25   2.0\n",
+       "1                     Titanic          16  12.0\n",
+       "2                Moulin Rouge          15   4.0\n",
+       "3        Mutiny on the Bounty          15   1.0\n",
+       "4                   Cleopatra          14   5.0\n",
+       "...                       ...         ...   ...\n",
+       "4828               Iron Man 2           1   0.0\n",
+       "4829               Mandragola           1   0.0\n",
+       "4830              The Pointer           1   0.0\n",
+       "4831             Miracle Fish           1   0.0\n",
+       "4832  Little Isles of Freedom           1   0.0\n",
        "\n",
        "[4833 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
        "4                  Italian    161.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
        "[423 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1206,7 @@
        "4                  Italian    161.0         NaN   NaN              NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,7 @@
        "Name: Won Best Picture, Length: 16744, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
        "Name: Won Best Picture, Length: 16744, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1689,7 @@
        "[16744 rows x 18 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1706,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2039,7 +2039,7 @@
        "3563                1.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2105,7 +2105,7 @@
        " 'Film-Noir': 79}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2126,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2476,7 +2476,7 @@
        "[16744 rows x 18 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
