--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,6 +1,67 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import dependencies\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.stats as sts\n",
+    "import numpy as np\n",
+    "import matplotlib as mpl\n",
+    "from matplotlib import cm\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "cmaps = OrderedDict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set path for CSV files\n",
+    "\n",
+    "oscars_file = \"Resources/the_oscar_award.csv\"\n",
+    "oscars_df = pd.read_csv(oscars_file)\n",
+    "\n",
+    "\n",
+    "movies_file = \"Resources/movies.csv\"\n",
+    "movies_df = pd.read_csv(movies_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
