--- a/data_merge_paola.ipynb
+++ b/data_merge_paola.ipynb
@@ -3586,16 +3586,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x8a1c0b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7cbe030>"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3616,7 +3616,7 @@
     "#DISNEY VIDEO GENRES: Bar Graph\n",
     "top_disney_genres.plot.bar(x='Genre', y='Genre Count', rot=90, color='b')\n",
     "\n",
-    "#plt.savefig(\"Exported Plots/Disney_genre_count.png\")"
+    "#plt.savefig(\"Plots/Max_Temp_vs_nLat.png\")"
    ]
   },
   {
