notes for pie chart

--- a/notebook_justin.ipynb
+++ b/notebook_justin.ipynb
@@ -2468,6 +2468,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#########################\n",
+    "# Do a pie chart of genres of total movies just for each service\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [
